--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.padding {
+  padding: 0px 10px;
+}
+
 body {
   background-image: url("./bg.png");
   background-size: cover;
@@ -25,11 +29,9 @@ body {
   font-size: 25px;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
@@ -61,9 +63,10 @@ body {
   color: white;
   display: none;
 }
+
 #result {
   position: fixed;
-  top: 10%; 
+  top: 10%;
   left: 10%;
   transform: translate(-50%, -50%);
   height: 250px;
@@ -75,7 +78,8 @@ body {
   text-align: center;
   padding: 2rem;
 }
-#show-time{
+
+#show-time {
   text-align: center;
   color: white;
   margin: 10px 0;
@@ -84,18 +88,23 @@ body {
 .green {
   color: #9dffad;
 }
+
 .red {
   color: #eb6565;
 }
+
 .bold {
   font-weight: 700;
 }
+
 .inactive {
   border: 2px solid white !important;
 }
+
 .hidden {
   display: none;
 }
+
 .title {
   text-align: center;
   color: white;
@@ -127,6 +136,7 @@ body {
   justify-content: center;
   margin: 30px 0;
 }
+
 button {
   padding: 10px 20px;
   border: none;
@@ -158,22 +168,18 @@ button {
   color: white;
   border-radius: 15px;
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
 }
 
 #modal-background {
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    92.49deg,
-    rgba(255, 255, 255, 0.1) 0.18%,
-    rgba(255, 255, 255, 0.05) 99.85%
-  );
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   height: 100vh;
   width: 100%;
@@ -181,11 +187,17 @@ button {
   top: 0;
 }
 
+.resultModal {
+  margin-top: 20%;
+  margin-left: 40%;
+}
+
 @media only screen and (max-width: 700px) {
   .box-container {
     padding: 0 20px;
     width: 100%;
   }
+
   .card {
     flex-direction: column;
   }
